crates/paws_domain/src/transformer/snapshots/paws_domain__transformer__transform_tool_calls__tests__transform_tool_calls_converts_tool_results_to_user_messages.snap
---
source: crates/paws_domain/src/transformer/transform_tool_calls.rs
expression: snapshot
---
transformation: TransformToolCalls
before:
  messages:
    - tool:
        name: mixed_tool
        call_id: call_456
        output:
          is_error: false
          values:
            - text: First text output
            - image:
                url: "data:image/png;base64,test_image_data"
                mime_type: image/png
            - text: Second text output
            - empty
after:
  messages:
    - text:
        role: User
        content: First text output
    - image:
        url: "data:image/png;base64,test_image_data"
        mime_type: image/png
    - text:
        role: User
        content: Second text output
